@@ -2,6 +2,7 @@ Package: aroma.cn.eval
 ======================
 
 Version: 0.5.2 [2014-03-24]
+o Now fitRoc() also returns the number of positives and negatives.
 o Added argument 'as' to fitRoc().
 o ROBUSTNESS: Added validation of arguments to RocCurve().
 o Now RocCurve() also accepts a list with element 'roc' and 'cuts'.
